Changed bootstrap and jquery to local copy Added meyer's reset and a bit of styling Used bootstrap (sorry Bror)

--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,141 @@
+@import 'https://fonts.googleapis.com/css?family=Open+Sans|Teko';
+
+
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+html {
+  height: 100%;
+}
+
+/* Typography */
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Teko', sans-serif;
+}
+
+h1 {
+  font-size: 5em;
+}
+
+h2 {
+  font-size: 4em;
+}
+
+h3 {
+  font-size: 3em;
+}
+
+h4 {
+  font-size: 2em;
+}
+
+h5 {
+  font-size: 1.5em;
+}
+
+h6 {
+  font-size: 1em;
+}
+
+body,
+p,
+a,
+div,
+span {
+  font-family: 'Open Sans', sans-serif;
+}
+
+/* Header */
+
+/* Nav */
+
+a.navbar-brand {
+  font-family: 'Teko', sans-serif;
+  font-size: 2.5em;
+}
+
+
+/* Body  */
+
 body {
     background-color: #eee;
+    bottom: 50px;
 }
 
-header {
-    background-color: #333;
+main .front-page-info {
+  margin: 0 auto;
 }
 
-header h1 {
-    color: #eee;
+main .front-page-info h1 {
+  text-align: center;
 }
+
+
+/* Footer */
 
 footer {
     background-color: #111;
+    height: 50px;
 }
 
-footer p {
+footer .copyright-text {
+  margin: 0 auto;
+}
+
+footer .copyright-text p {
     color: #eee;
     text-align: center;
+    line-height: 50px;
 }
